--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenMP REQUIRED)
 find_package(faiss REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     set(CMAKE_CXX_FLAGS "-O0 -g -std=c++17 -DHAVE_CXX0X -fpic -ftree-vectorize")
@@ -18,3 +19,4 @@ endif()
 
 add_executable(vss_test vss_test.cpp)
 target_link_libraries(vss_test faiss)
+target_link_libraries(vss_test Eigen3::Eigen)
