--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.0...3.26)
 
-project(vss_test
-    LANGUAGES CXX)
+project(vss_test LANGUAGES CXX)
 
 include_directories(src)
+include_directories(extern)
 
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenMP REQUIRED)
 find_package(faiss REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
+find_package(pybind11 REQUIRED)
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     set(CMAKE_CXX_FLAGS "-O0 -g -std=c++17 -DHAVE_CXX0X -fpic -ftree-vectorize")
@@ -20,3 +22,4 @@ endif()
 add_executable(vss_test vss_test.cpp)
 target_link_libraries(vss_test faiss)
 target_link_libraries(vss_test Eigen3::Eigen)
+target_link_libraries(vss_test pybind11::headers Python::Python)
